Bug 137532 - EDITING: Font formatting lost after undo/redo
Summary: EDITING: Font formatting lost after undo/redo
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords: bibisected, bisected, regression
: 137973 138681 (view as bug list)
Depends on:
Blocks: Undo-Redo
  Show dependency treegraph
 
Reported: 2020-10-16 13:29 UTC by Roland Kurmann
Modified: 2023-12-04 15:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
ODT for reproduction (8.51 KB, application/vnd.oasis.opendocument.text)
2020-10-16 13:29 UTC, Roland Kurmann
Details
Screenshot 1 original file (8.53 KB, image/png)
2020-10-16 13:30 UTC, Roland Kurmann
Details
Screenshot 2 after undo (7.82 KB, image/png)
2020-10-16 13:31 UTC, Roland Kurmann
Details
Screenshot 3 after redo (8.66 KB, image/png)
2020-10-16 13:31 UTC, Roland Kurmann
Details
Bibisect log (2.90 KB, text/plain)
2020-10-17 20:00 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Kurmann 2020-10-16 13:29:32 UTC
Created attachment 166423 [details]
ODT for reproduction

Font formatting in writer paragraph is lost after 2x undo and 2x redo restores only partial formatting.

How to reproduce:
1) Open the attached undo_bug_repro_v03.odt file (It contains the text "AAA BBB CCC" in Droid Sans 18pt font.)
2) Select the text "CCC"
3) Type "xxx"
4) Ctrl-Z (undo)
5) Ctrl-Z (undo)

Actual: The font resets to Liberation Serif 12pt font.

Expected: "xxx" is undo done and replaced by previous "CCC".

6) Ctrl-Y (redo)
7) Ctrl-Y (redo)

Actual: "xxx" is in Droid Sans 18pt font, but not "AAA BBB".

Expected: All "AAA BBB xxx" is in Droid Sans 18pt font.

Version: 7.0.2.2
Build ID: 00(Build:2)
CPU threads: 4; OS: Linux 5.3; UI render: GL; VCL: kf5
Locale: de-CH (en_US.UTF-8); UI: de-DE
Calc: threaded

Version: 7.1.0.0.alpha0+
Build ID: 1ff072e3b672d864f119efdeba93248f47042ad1
CPU threads: 4; OS: Linux 5.3; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Roland Kurmann 2020-10-16 13:30:43 UTC
Created attachment 166425 [details]
Screenshot 1 original file
Comment 2 Roland Kurmann 2020-10-16 13:31:26 UTC
Created attachment 166426 [details]
Screenshot 2 after undo
Comment 3 Roland Kurmann 2020-10-16 13:31:45 UTC
Created attachment 166427 [details]
Screenshot 3 after redo
Comment 4 Telesto 2020-10-16 14:42:54 UTC
Repro
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 94e6e140491de31c0788c91af855a75a3bb12709
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

also in
Version: 6.4.0.0.beta1+ (x64)
Build ID: 20be5cd0bdc57d812bf34a2debfe48caa51de881
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 5 Telesto 2020-10-16 14:44:03 UTC
Working as expected in
Version: 6.0.6.0.0+
Build ID: c30963b8b4bbbe42a24b97aafa161eff9d7ccdd4
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 6 Telesto 2020-10-17 20:00:03 UTC
Created attachment 166473 [details]
Bibisect log

Bisected to
author	Phil Krylov <phil.krylov@gmail.com>	2019-02-10 04:31:15 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	2019-03-13 11:27:52 +0100
commit 6abed0ea006f3616e40faf2ae782cf64f8ac2914 (patch)
tree edb02b8c979b886b65816aa0b56f60ddbd7708be
parent 3df0d6e3e161a63282e58f31b197c2d1ba28a6b5 (diff)
tdf#79717 save/restore character format on selection overwrite

At least here it started, situation has improved.. afterwards (only single word, not full line)

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6abed0ea006f3616e40faf2ae782cf64f8ac2914
Comment 7 Telesto 2020-10-17 20:01:18 UTC
Adding CC: to Phil Krylov
Comment 8 Telesto 2020-10-17 20:05:51 UTC
@Xisco
Phil Krylov still around? It was his first contribution
Comment 9 Xisco Faulí 2020-11-04 15:28:52 UTC
*** Bug 137973 has been marked as a duplicate of this bug. ***
Comment 10 Xisco Faulí 2020-11-04 16:34:35 UTC
(In reply to Telesto from comment #8)
> @Xisco
> Phil Krylov still around? It was his first contribution

noup, last commit is from 2019-03-21
Comment 11 Commit Notification 2020-11-05 05:56:21 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/12eac5bcbc9b71bf00cb88b918988826229cca35

tdf#137532: do not reset attributes deleting selection

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2020-11-05 10:56:28 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/5f31629d88207b5842eb3dafcbf6948d0d52bb24

tdf#137532: do not reset attributes deleting selection

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2020-11-06 15:38:33 UTC
Hi Scito, Telesto,
Please verify the issue is fixed with a recent daily build. Thanks in advance
Comment 14 Roland Kurmann 2020-11-07 07:20:55 UTC
I've tested. The bug is gone. Thanks for fixing!

I was testing
Linux-rpm_deb-x86_64@86-TDF-dbg 	2020-11-06 18:52:31 	124da70

Version: 7.1.0.0.alpha1+
Build ID: 124da70f50b526381a979d059e8e5f54c8717208
CPU threads: 4; OS: Linux 5.3; UI render: default; VCL: kf5
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF-dbg, Branch:master, Time: 2020-11-06_16:25:59
Calc: threaded
Comment 15 Xisco Faulí 2020-11-09 09:00:39 UTC
(In reply to Scito from comment #14)
> I've tested. The bug is gone. Thanks for fixing!
> 
> I was testing
> Linux-rpm_deb-x86_64@86-TDF-dbg 	2020-11-06 18:52:31 	124da70
> 
> Version: 7.1.0.0.alpha1+
> Build ID: 124da70f50b526381a979d059e8e5f54c8717208
> CPU threads: 4; OS: Linux 5.3; UI render: default; VCL: kf5
> Locale: en-US (en_US.UTF-8); UI: en-US
> TinderBox: Linux-rpm_deb-x86_64@86-TDF-dbg, Branch:master, Time:
> 2020-11-06_16:25:59
> Calc: threaded

Thanks for checking. Setting to VERIFIED
Comment 16 Xisco Faulí 2020-12-07 16:38:17 UTC
*** Bug 138681 has been marked as a duplicate of this bug. ***