tdf#137532: do not reset attributes deleting selection

Regression from 6abed0ea006f3616e40faf2ae782cf64f8ac2914

While at it, extend unittest for tdf#79717 to test another
regression from the same commit I found while testing the patch:
type 'a', type bold 'b', select both characters, type 'c'
-> it should be bold

Change-Id: I5b0b8ce4bfdfb4d52051e25c366827d7b594bb1a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105316
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>

this also includes commit

tdf#79717: sw_uiwriter: Add unittest

Change-Id: I866cbc057113003e5bbbd20e2e5812a1045b5133
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105300
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105329
Reviewed-by: Michael Stahl <michael.stahl@cib.de>